fix alignment

--- a/src/app/components/Footer/Footer.css
+++ b/src/app/components/Footer/Footer.css
@@ -134,7 +134,7 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 150%;
-  text-align: left;
+  text-align: center;
   letter-spacing: 0.06em;
   text-decoration-line: underline;
   color: #fff5e9;
